// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardGroup[Base] should render correctly  1`] = `
<div
  class="c-8xm8n5"
  style="height: 300px;"
>
  <div
    class="cywk9e6"
  >
    <div
      class="cwvggbe"
      style="grid-template-columns: repeat(3, 1fr);"
    >
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(25, 122, 250, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Tags
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(122, 90, 247, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Set Owner
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 169, 64, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Set Property
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(116, 209, 61, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Score
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(22, 178, 235, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Add Deal
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 77, 80, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Add Task
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(39, 174, 96, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Send
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(41, 128, 185, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Info
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(165, 105, 189, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Success
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(153, 163, 164, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Filter
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardGroup[Base] should render correctly about checkbox 1`] = `
<div>
  <div
    style="margin: 8px; padding: 8px 16px; background: rgba(130, 130, 130, 0.1); border-radius: 10px;"
  >
    <div
      class="c-2oyyob c-jx5dse c-ua7ewq"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="checkbox"
      />
      <span
        class="c-do3bmm"
      >
        <i
          class="cs409o1"
          data-soui-role="checkbox-indicator"
          tabindex="1"
        >
          <svg
            fill="currentColor"
            viewBox="0 0 16 16"
          >
            <path
              d="M3 8C3 7.44772 3.44772 7 4 7H12C12.5523 7 13 7.44772 13 8V8C13 8.55228 12.5523 9 12 9H4C3.44772 9 3 8.55228 3 8V8Z"
            />
          </svg>
        </i>
      </span>
      <span
        class="c19hl67"
      >
        全选
      </span>
    </div>
  </div>
  <div
    class="c-8xm8n5"
    style="height: 300px;"
  >
    <div
      class="cywk9e6"
    >
      <div
        class="cwvggbe"
        style="grid-template-columns: repeat(3, 1fr);"
      >
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(25, 122, 250, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Tags
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob c-jx5dse"
          >
            <input
              checked=""
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              >
                <svg
                  fill="currentColor"
                  viewBox="0 0 16 16"
                >
                  <path
                    d="M2.2216 7.27815C2.61213 6.88763 3.24529 6.88763 3.63582 7.27815L7.17135 10.8137C7.56188 11.2042 7.56188 11.8374 7.17135 12.2279V12.2279C6.78083 12.6184 6.14766 12.6184 5.75714 12.2279L2.2216 8.69237C1.83108 8.30184 1.83108 7.66868 2.2216 7.27815V7.27815Z"
                  />
                  <path
                    d="M14.2431 3.7426C14.6336 4.13312 14.6336 4.76629 14.2431 5.15681L7.17202 12.2279C6.7815 12.6184 6.14833 12.6184 5.75781 12.2279V12.2279C5.36728 11.8374 5.36728 11.2042 5.75781 10.8137L12.8289 3.7426C13.2194 3.35208 13.8526 3.35208 14.2431 3.7426V3.7426Z"
                  />
                </svg>
              </i>
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(122, 90, 247, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Set Owner
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 169, 64, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Set Property
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(116, 209, 61, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Score
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(22, 178, 235, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Add Deal
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 77, 80, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Add Task
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(39, 174, 96, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Send
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(41, 128, 185, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Info
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(165, 105, 189, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Success
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(153, 163, 164, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Filter
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardGroup[Base] should render correctly about disabled 1`] = `
<div>
  <div
    class="c-8xm8n5"
    style="height: 300px;"
  >
    <div
      class="cywk9e6"
    >
      <div
        class="cwvggbe"
        style="grid-template-columns: repeat(3, 1fr);"
      >
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(25, 122, 250, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Tags
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob csnudt"
          >
            <input
              disabled=""
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="-1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(122, 90, 247, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Set Owner
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 169, 64, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Set Property
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob csnudt"
          >
            <input
              disabled=""
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="-1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(116, 209, 61, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Score
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(22, 178, 235, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Add Deal
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob csnudt"
          >
            <input
              disabled=""
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="-1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 77, 80, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Add Task
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(39, 174, 96, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Send
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob csnudt"
          >
            <input
              disabled=""
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="-1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(41, 128, 185, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Info
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(165, 105, 189, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Success
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob csnudt"
          >
            <input
              disabled=""
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="-1"
              />
            </span>
          </div>
        </div>
        <div
          class="cwvhron"
        >
          <div
            style="padding: 20px;"
          >
            <div>
              <div
                style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(153, 163, 164, 0.125);"
              >
                <span>
                  i
                </span>
              </div>
              <span
                style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
              >
                Filter
              </span>
            </div>
            <p
              style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
            >
              Add or delete tag for your customer. You can sort your customer...
            </p>
            <div
              style="color: rgb(102, 108, 124);"
            >
              <span>
                i
              </span>
              Add This
            </div>
          </div>
          <div
            class="c-4232zt c-2oyyob"
          >
            <input
              style="display: none;"
              tabindex="0"
              type="checkbox"
            />
            <span
              class="c-do3bmm"
            >
              <i
                class="cs409o1"
                data-soui-role="checkbox-indicator"
                tabindex="1"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardGroup[Base] should render correctly about lazyout 1`] = `
<div
  class="c-8xm8n5"
  style="height: 400px;"
>
  <div
    class="cywk9e6"
  >
    <div
      class="cwvggbe"
      style="grid-template-columns: repeat(1, 1fr);"
    >
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(25, 122, 250, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Tags
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(122, 90, 247, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Set Owner
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 169, 64, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Set Property
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(116, 209, 61, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Score
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(22, 178, 235, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Add Deal
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 77, 80, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Add Task
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(39, 174, 96, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Send
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(41, 128, 185, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Info
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(165, 105, 189, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Success
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(153, 163, 164, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Filter
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CardGroup[Base] should render correctly about width 1`] = `
<div
  class="c-8xm8n5"
  style="height: 300px;"
>
  <div
    class="cywk9e6"
  >
    <div
      class="cwvggbe"
      style="grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));"
    >
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(25, 122, 250, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Tags
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(122, 90, 247, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Set Owner
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 169, 64, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Set Property
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(116, 209, 61, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Score
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(22, 178, 235, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Add Deal
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(255, 77, 80, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Add Task
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(39, 174, 96, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Send
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(41, 128, 185, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Info
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(165, 105, 189, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Success
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
      <div
        class="cwvhron"
      >
        <div
          style="padding: 20px;"
        >
          <div>
            <div
              style="width: 40px; height: 40px; display: inline-flex; border-radius: 50%; background: rgba(153, 163, 164, 0.125);"
            >
              <span>
                i
              </span>
            </div>
            <span
              style="margin-inline-start: 12px; font-size: 16px; font-weight: 500; color: rgb(51, 62, 89);"
            >
              Filter
            </span>
          </div>
          <p
            style="margin: 20px 0px; font-size: 14px; color: rgb(153, 157, 168);"
          >
            Add or delete tag for your customer. You can sort your customer...
          </p>
          <div
            style="color: rgb(102, 108, 124);"
          >
            <span>
              i
            </span>
            Add This
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
